--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@
 /build
 /captures
 .externalNativeBuild
+.idea/modules.xml
+.idea/caches/build_file_checksums.ser
+.idea/caches/build_file_checksums.ser
+.idea/caches/build_file_checksums.ser
